Add cases for display

--- a/_data/cases.yml
+++ b/_data/cases.yml
@@ -1,5 +1,7 @@
 - name: Parkeringsprojekt
   description: Coolt uppdrag för parkeringskund
+  image: parking.svg
 
 - name: Bankuppdraget
   description: Sjukt viktigt uppdrag för alla mämniskors överlevnad
+  image: bank.svg
