Update cases and company data

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,6 +1,6 @@
- - java
- - appar
- - tech
- - business
- - världsproblem
- - att laga mat
+ - mobil- och webbutveckling
+ - fullstack
+ - tech leadership
+ - UX
+ - dataanalys och BI
+ - att bygga tillsammans
