Add employee info

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,11 +1,11 @@
 - name: Henrik
-  tagline: Ledande testautomatiserare om dagen, superhjälte om natten.
+  tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Han är teknikagnostisk men kombinerar det med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen. I sina erfarenheter finns kompetens inom fullstack, webb, BI och tech ledning.
 
 - name: Ludde
-  tagline: Vad många inte vet om Ludde är att han kan flyga!
+  tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person - vad som gör dig glad och vad du går igång på. Han är en techwannabe som älskar relationer och när han inte sprider sin energi runt sig så går han in i introvertbubblan och laddar nytt. Ludde kan sälj och techkonsulting.
 
 - name: Anders
-  tagline: En persona är inte komplett utan ett komplett släktträd i fem generationer.
+  tagline: Anders är UX proffs! Han är full av värdefull teori och kan leda och leverera UX, flöden, UI till design. Han älskar sin UX och lever sig in i personas med kompletta släktträd i flera generationer. Anders är ett socialt geni och en uppskattad vän i uppdraget som får dig att skratta. Han kan sin Yohji Yamamoto ner till plagg och kollektionsnivå.
 
 - name: Oscar
-  tagline: När Oscar inte kodar appar spelar han tetris!
+  tagline: Oscar är en riktig multi-konstnär i utveckling, UX och mobilt. Han har gjort sina 10 000 utvecklingstimmar med råge och fortsätter kära ner sig i nya techgrejer. På sin ständigt växande to-do finns massor av projekt som blir gjorda i samma takt som han slukar ny musik. Oscar älskar att engagera sig och göra sin omgivning bättre. Han dricker gärna morotsjuice och släpper hip hop musik.
