--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,11 +1,11 @@
 - name: Henrik
-  tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Han är teknikagnostisk men kombinerar det med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen. I sina erfarenheter finns kompetens inom fullstack, BI och tech-ledning.
+  tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Teknikagnostisk med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen --förutom kl 11:30 för då ringer mat och sovklockan. Fullstack, BI och tech-ledning är bara några av hans erfarenheter.
 
 - name: Ludde
-  tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person - vad som gör dig glad och vad du går igång på. Han är en techwannabe som älskar relationer och när han inte sprider sin energi runt sig så går han in i introvertbubblan och laddar nytt. Ludde kan sälj och techkonsulting.
+  tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person -- vad som gör dig glad och vad du går igång på. Han är en tech-wannabe som älskar relationer och när han inte sprider sin energi runt sig så funderar han kring matlagning och bilism. Ludde kan sälj och techkonsulting.
 
 - name: Anders
-  tagline: Anders är UX proffs! Han är full av värdefull teori och kan leda och leverera UX, flöden, UI till design. Han älskar sin UX och lever sig in i personas med kompletta släktträd i flera generationer. Anders är ett socialt geni och en uppskattad vän som får dig att skratta. Han kan sin Yohji Yamamoto ner till plagg- och kollektionsnivå.
+  tagline: Anders är proffs på UX! Full av värdefull teori och med ett stort leende lever han och leverar UX, user stories, personas och design. En persona är inte komplett utan ett släktträd i flera generationer. Anders är ett socialt geni och en uppskattad vän som får dig att skratta. Han kan sin Yohji Yamamoto ner till plagg- och kollektionsnivå.
 
 - name: Oscar
-  tagline: Oscar är en riktig multikonstnär i utveckling, UX och mobilt. Han har gjort sina 10 000 utvecklingstimmar med råge och fortsätter kära ner sig i nya techgrejer. På sin ständigt växande to-do finns massor av projekt som blir gjorda i samma takt som han slukar ny musik. Oscar älskar att engagera sig och göra sin omgivning bättre. Han dricker gärna morotsjuice och släpper hiphopmusik.
+  tagline: En riktig multikonstnär i utveckling, UX och mobilt. Sakta men säkert betar han sig igenom video efter video från senaste Google I/O och håller sig uppdaterad på det senaste inom tech. Hobbyprojekt varvas med att sluka ny musik - är det en blandning av elektroniskt, rock och hip-hop går det hem direkt. Oscar älskar att engagera sig i och göra sin omgivning bättre. Om det kan det förbättras så ska det förbättras är hans motto.
