--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,8 +1,8 @@
 - name: Henrik
-  tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Teknikagnostisk med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen --förutom kl 11:30 för då ringer mat och sovklockan. Fullstack, BI och tech-ledning är bara några av hans erfarenheter.
+  tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Teknikagnostisk med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen - förutom kl 11:30 för då ringer mat och sovklockan. Fullstack, BI och tech-ledning är bara några av hans erfarenheter.
 
 - name: Ludde
-  tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person -- vad som gör dig glad och vad du går igång på. Han är en tech-wannabe som älskar relationer och när han inte sprider sin energi runt sig så funderar han kring matlagning och bilism. Ludde kan sälj och techkonsulting.
+  tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person - vad som gör dig glad och vad du går igång på. Han är en tech-wannabe som älskar relationer och när han inte sprider sin energi runt sig så funderar han kring matlagning och bilism. Ludde kan sälj och techkonsulting.
 
 - name: Anders
   tagline: Anders är proffs på UX! Full av värdefull teori och med ett stort leende lever han och leverar UX, user stories, personas och design. En persona är inte komplett utan ett släktträd i flera generationer. Anders är ett socialt geni och en uppskattad vän som får dig att skratta. Han kan sin Yohji Yamamoto ner till plagg- och kollektionsnivå.
