--- a/_data/cases.yml
+++ b/_data/cases.yml
@@ -5,7 +5,7 @@
 
 - name: Helt nödvändig business
   image: bank.svg
-  description: Hejare både leder och är en del av ett produktteam på en bank. Teamet jobbar fullstack och förvaltar samt utvecklar produkter som ligger i framkant och utmanar andra aktörer i branschen. Vi är med och påverkar såväl teknisk arkitektur och fattar svåra beslut tillsammans med organisationen när gamla system ska bytas ut och förnyas. Banken har en framåtlutad och självorganiserande techorganisation -- precis som vi.
+  description: Hejare både leder och är en del av ett produktteam på en bank. Teamet jobbar fullstack och förvaltar samt utvecklar produkter som ligger i framkant och utmanar andra aktörer i branschen. Vi är med och påverkar såväl teknisk arkitektur och fattar svåra beslut tillsammans med organisationen när gamla system ska bytas ut och förnyas. Banken har en framåtlutad och självorganiserande techorganisation - precis som vi.
 
 
 - name: Dataspelsbolaget
