--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -8,4 +8,4 @@
   tagline: En riktig multikonstnär i utveckling, UX och mobilt. Sakta men säkert betar han sig igenom video efter video från senaste Google I/O och håller sig uppdaterad på det senaste inom tech. Hobbyprojekt varvas med att sluka ny musik - är det en blandning av elektroniskt, rock och hip-hop går det hem direkt. Oscar älskar att engagera sig i och göra sin omgivning bättre. Om det kan det förbättras så ska det förbättras är hans motto.
 
 - name: Bernhard
-  tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och kan orginalreceptet på en äkta carbonara. 
+  tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och kan orginalreceptet på en äkta Carbonara. 
