--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -9,3 +9,6 @@
 
 - name: Bernhard
   tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och orginalreceptet på en äkta Carbonara. 
+
+- name: Markus
+  tagline: Markus är innovations- och vetenskapsfantast som tror att det mesta kan lösas med en påhittig teknisk lösning. Han tror starkt på att team av engagerade människor från olika bakgrund kan uträtta storverk mot ett gemensamt mål. Med sig har han erfarenhet av webb-, spel- och algoritmutveckling i en uppsjö av språk och miljöer. I lurarna spelas jazz, soul och funk och hans många gitarrer är alltid nära till hands.
