Support other image formats than .jpg for employees

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -12,3 +12,4 @@
 
 - name: Markus
   tagline: Markus är innovations- och vetenskapsfantast som tror att det mesta kan lösas med en påhittig teknisk lösning. Han tror starkt på att team av engagerade människor från olika bakgrund kan uträtta storverk mot ett gemensamt mål. Med sig har han erfarenhet av webb-, spel- och algoritmutveckling i en uppsjö av språk och miljöer. I lurarna spelas jazz, soul och funk och hans många gitarrer är alltid nära till hands.
+  altImageName: Markus.png
