--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,3 +1,3 @@
 email: hej@hejare.se
 phone: 0721 681 885
-address: Vasagatan 36 4 tr, 111 20 Stockholm
+address: Barnhusgatan 16 4 tr, 111 23 Stockholm
