--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -13,3 +13,7 @@
 - name: Markus
   tagline: Markus är innovations- och vetenskapsfantast som tror att det mesta kan lösas med en påhittig teknisk lösning. Han tror starkt på att team av engagerade människor från olika bakgrund kan uträtta storverk mot ett gemensamt mål. Med sig har han erfarenhet av webb-, spel- och algoritmutveckling i en uppsjö av språk och miljöer. I lurarna spelas jazz, soul och funk och hans många gitarrer är alltid nära till hands.
   altImageName: Markus.png
+
+- name: Set
+  tagline: Hejares alldeles egna tech wizard. Är det svårt så är det kul. Kod och tech lead med förståelse för affären och beteenden i team gör Set till alla teams stabila klippa. En vegetarstisk globetrotter med många barnvagnar i garaget!
+  altImageName: Set.jpg  
