Add employee Leo

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -10,6 +10,10 @@
 - name: Bernhard
   tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och orginalreceptet på en äkta Carbonara. 
 
+- name: Leo
+  tagline: Gedigen utvecklare med känsla för helhet och kvalité. Älskar att dampa loss hemma i trädgården, där rabatter och trallar flyger åt alla håll. Leo har en nyfunnen passion att träna Thaiboxning samt traditionell boxning, troligen är detta en sorts 40-årskris.
+  altImageName: Leo.png
+
 - name: Markus
   tagline: Markus är innovations- och vetenskapsfantast som tror att det mesta kan lösas med en påhittig teknisk lösning. Han tror starkt på att team av engagerade människor från olika bakgrund kan uträtta storverk mot ett gemensamt mål. Med sig har han erfarenhet av webb-, spel- och algoritmutveckling i en uppsjö av språk och miljöer. I lurarna spelas jazz, soul och funk och hans många gitarrer är alltid nära till hands.
   altImageName: Markus.png
