--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -19,7 +19,7 @@
   altImageName: Markus.png
 
 - name: Set
-  tagline: Hejares alldeles egna tech wizard. Är det svårt så är det kul. Kod och tech lead med förståelse för affären och beteenden i team gör Set till alla teams stabila klippa. En vegetarisk globetrotter med många barnvagnar i garaget!
+  tagline: Hejares alldeles egna tech wizard. Är det svårt så är det kul. Kod och tech lead med förståelse för affären och beteenden i team gör Set till alla teams stabila klippa. En vegetariansk globetrotter med många barnvagnar i garaget!
   altImageName: Set.jpg  
 
 - name: Sebastian
