--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -25,3 +25,15 @@
 - name: Sebastian
   tagline: "Sebastian har huvudet uppe bland molntjänster, infrastruktur och tooling. Vad applikationen gör är förstås viktigt, men desto roligare är allting runt omkring: hur den byggs, deployas, skalas, monitoreras, felsöks och trivs med livet rent allmänt. När Sebastian inte avnjuter nyhetsbreven från AWS med en kopp kaffe så jobbar han intensivt på att bli Sveriges snabbaste trummis!"
   altImageName: Sebastian.jpg
+
+- name: Johan
+  tagline: "Låt dig inte luras av Johans lugna och trevliga uppenbarelse, för under ytan lurar ett knivskarpt intellekt som lätt kan dissekera vilket bekymmer som helst. Lyckligtvis använder han det för att lösa tekniska utmaningar och ett och annat brädspel och inte för världsherravälde (vad vi vet)."
+  altImageName: JohanJansson.jpg
+
+- name: Hejare X
+  tagline: "Hejare X brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen. Vem är hon? Snart får du veta."
+  altImageName: hejarex.jpg
+  
+- name: Hejare Y
+  tagline: "Hejare Y tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
+  altImageName: hejarey.jpg
