Added new employee description for Johan S.

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -37,3 +37,7 @@
 - name: Hejare Y
   tagline: "Hejare Y tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
   altImageName: hejarey.jpg
+
+- name: Johan
+  tagline: "Johan är en generalist med erfarenheter inom utveckling, projektledning och produktägande. Media och finans är exempel på branscher där han har stor kännedom. Två nyckelord som speglar honom är effektiv och flexibel. Johan är i övrigt en sportfåne som konsumerar i princip vad som helst."
+  altImageName: Johan.jpg
