--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -8,7 +8,7 @@
   tagline: En riktig multikonstnär i utveckling, UX och mobilt. Sakta men säkert betar han sig igenom video efter video från senaste Google I/O och håller sig uppdaterad på det senaste inom tech. Hobbyprojekt varvas med att sluka ny musik - är det en blandning av elektroniskt, rock och hip-hop går det hem direkt. Oscar älskar att engagera sig i och göra sin omgivning bättre. Om det kan det förbättras så ska det förbättras är hans motto.
 
 - name: Bernhard
-  tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och orginalreceptet på en äkta Carbonara. 
+  tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och orginalreceptet på en äkta Carbonara.
 
 - name: Leo
   tagline: Gedigen utvecklare med känsla för helhet och kvalité. Älskar att dampa loss hemma i trädgården, där rabatter och trallar flyger åt alla håll. Leo har en nyfunnen passion att träna Thaiboxning samt traditionell boxning, troligen är detta en sorts 40-årskris.
@@ -20,7 +20,7 @@
 
 - name: Set
   tagline: Hejares alldeles egna tech wizard. Är det svårt så är det kul. Kod och tech lead med förståelse för affären och beteenden i team gör Set till alla teams stabila klippa. En vegetariansk globetrotter med många barnvagnar i garaget!
-  altImageName: Set.jpg  
+  altImageName: Set.jpg
 
 - name: Sebastian
   tagline: "Sebastian har huvudet uppe bland molntjänster, infrastruktur och tooling. Vad applikationen gör är förstås viktigt, men desto roligare är allting runt omkring: hur den byggs, deployas, skalas, monitoreras, felsöks och trivs med livet rent allmänt. När Sebastian inte avnjuter nyhetsbreven från AWS med en kopp kaffe så jobbar han intensivt på att bli Sveriges snabbaste trummis!"
@@ -30,12 +30,12 @@
   tagline: "Låt dig inte luras av Johans lugna och trevliga uppenbarelse, för under ytan lurar ett knivskarpt intellekt som lätt kan dissekera vilket bekymmer som helst. Lyckligtvis använder han det för att lösa tekniska utmaningar och ett och annat brädspel och inte för världsherravälde (vad vi vet)."
   altImageName: JohanJansson.jpg
 
-- name: Hejare X
-  tagline: "Hejare X brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen. Vem är hon? Snart får du veta."
+- name: Frida
+  tagline: "Frida brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen. Vem är hon? Snart får du veta."
   altImageName: hejarex.jpg
-  
-- name: Hejare Y
-  tagline: "Hejare Y tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
+
+- name: Yvonne
+  tagline: "Yvonne tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
   altImageName: hejarey.jpg
 
 - name: Johan
