Corrected employee description

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -31,7 +31,7 @@
   altImageName: JohanJansson.jpg
 
 - name: Frida
-  tagline: "Frida brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen. Vem är hon? Snart får du veta."
+  tagline: "Frida brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen."
   altImageName: hejarex.jpg
 
 - name: Yvonne
