Revert "added albin to employees"
This reverts commit 972e2c17abe4117551e89ac93c119d608fa2bfd2.

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -24,7 +24,7 @@
 
 - name: Johan
   tagline: "Låt dig inte luras av Johans lugna och trevliga uppenbarelse, för under ytan lurar ett knivskarpt intellekt som lätt kan dissekera vilket bekymmer som helst. Lyckligtvis använder han det för att lösa tekniska utmaningar och ett och annat brädspel och inte för världsherravälde (vad vi vet)."
-  altImageName: JohanJansson
+  altImageName: JohanJansson.jpg
 
 - name: Frida
   tagline: "Frida brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen."
@@ -34,6 +34,3 @@
 
 - name: Johan
   tagline: "Johan är en generalist med erfarenheter inom utveckling, projektledning och produktägande. Media och finans är exempel på branscher där han har stor kännedom. Två nyckelord som speglar honom är effektiv och flexibel. Johan är i övrigt en sportfåne som konsumerar i princip vad som helst."
-
-- name: Albin
-  tagline: "Albin är bäst på företaget."
