added albin to employees

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,3 +1,6 @@
+- name: Albin
+  tagline: Albin är bäst på företaget.
+
 - name: Henrik
   tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Teknikagnostisk med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen - förutom kl 11:30 för då ringer mat och sovklockan. Fullstack, BI och tech-ledning är bara några av hans erfarenheter.
 
