--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,5 +1,5 @@
 - name: Albin
-  tagline: Albin är bäst på företaget.
+  tagline: Albin är systemutvecklare med intresse för allting som handlar om data. Handlar det om att plocka fram nya ML-lösningar på gamla problem eller att bygga back end- och molnlösningar för komplexa system blir han extra exalterad. Han är en engagerad lagspelare som älskar när människor ges möjlighet att lära sig av varandra. När Albin inte knackar kod i Vim så ägnar han fritiden åt att läsa böcker, spela bas och vara ute med sin stora vita hund. 
 
 - name: Henrik
   tagline: Henrik kombinerar djup teknisk kunskap och problemlösning med en enastående förmåga att fylla rummet med entusiasm. Teknikagnostisk med en rejäl dos nörderi i fantasy, bevattningssystem, smarta hem och olika sorters krypteringsnycklar. Henrik är empatisk och kommunicerar rakt i alla lägen - förutom kl 11:30 för då ringer mat och sovklockan. Fullstack, BI och tech-ledning är bara några av hans erfarenheter.
@@ -8,13 +8,13 @@
   tagline: Ludde kan lite om väldigt mycket. Han är genuint intresserad i dig som person - vad som gör dig glad och vad du går igång på. Han är en tech-wannabe som älskar relationer och när han inte sprider sin energi runt sig så funderar han kring matlagning och bilism. Ludde kan sälj och techkonsulting.
 
 - name: Oscar
-  tagline: En riktig multikonstnär i utveckling, UX och mobilt. Sakta men säkert betar han sig igenom video efter video från senaste Google I/O och håller sig uppdaterad på det senaste inom tech. Hobbyprojekt varvas med att sluka ny musik - är det en blandning av elektroniskt, rock och hip-hop går det hem direkt. Oscar älskar att engagera sig i och göra sin omgivning bättre. Om det kan det förbättras så ska det förbättras är hans motto.
+  tagline: En riktig multikonstnär i utveckling, UX och mobilt. Sakta men säkert betar han sig igenom video efter video från senaste Google I/O och håller sig uppdaterad på det senaste inom tech. Hobbyprojekt varvas med att sluka ny musik - är det en blandning av elektroniskt, rock och hip-hop går det hem direkt. Oscar älskar att engagera sig i och göra sin omgivning bättre. Om det kan förbättras så ska det förbättras är hans motto.
 
 - name: Bernhard
   tagline: Bernhard är en engagerad och kreativ problemlösare med stor erfarenhet att utveckla organisationer och team. Han brinner för att skapa tillsammans med andra, vad spelar egentligen mindre roll. Bernhard kan projekt- och förändringsledning, team, talanghantering och orginalreceptet på en äkta Carbonara.
 
 - name: Leo
-  tagline: Gedigen utvecklare med känsla för helhet och kvalité. Älskar att dampa loss hemma i trädgården, där rabatter och trallar flyger åt alla håll. Leo har en nyfunnen passion att träna Thaiboxning samt traditionell boxning, troligen är detta en sorts 40-årskris.
+  tagline: Gedigen utvecklare med känsla för helhet och kvalité. Älskar att dampa loss hemma i trädgården, där rabatter och trallar flyger åt alla håll. Leo har en nyfunnen passion för att träna Thaiboxning samt traditionell boxning, troligen är detta en sorts 40-årskris.
 
 - name: Markus
   tagline: Markus är innovations- och vetenskapsfantast som tror att det mesta kan lösas med en påhittig teknisk lösning. Han tror starkt på att team av engagerade människor från olika bakgrund kan uträtta storverk mot ett gemensamt mål. Med sig har han erfarenhet av webb-, spel- och algoritmutveckling i en uppsjö av språk och miljöer. I lurarna spelas jazz, soul och funk och hans många gitarrer är alltid nära till hands.
@@ -33,7 +33,7 @@
   tagline: "Frida brinner för Machine Learning nästan så mycket att det lyser ur hennes ögon. Hon är en doer av rang och när hon inte sprider kunskap och glädje på jobbet renoverar hon hus med sin syster och spelar in techfilmer för att även engagera personer utanför den innersta nördkretsen."
 
 - name: Yvonne
-  tagline: "Yvonne tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
+  tagline: "Yvonne tar sig gärna an nya utmaningar, nya tekniker och nya männsikor - alltid med ett leende på läpparna. Om det dessutom kan innehålla mänskliga språk och Natural Language Processing är lyckan gjord."
 
 - name: Johan
   tagline: "Johan är en generalist med erfarenheter inom utveckling, projektledning och produktägande. Media och finans är exempel på branscher där han har stor kännedom. Två nyckelord som speglar honom är effektiv och flexibel. Johan är i övrigt en sportfåne som konsumerar i princip vad som helst."
