Small change to fredriks text

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -39,4 +39,4 @@
   tagline: "Johan är en generalist med erfarenheter inom utveckling, projektledning och produktägande. Media och finans är exempel på branscher där han har stor kännedom. Två nyckelord som speglar honom är effektiv och flexibel. Johan är i övrigt en sportfåne som konsumerar i princip vad som helst."
 
 - name: Fredrik
-  tagline: "Om det är något som Fredrik inte tycker om så är det att skriva beskrivande texter så som denna. Något som Fredrik däremot tycker om är golf och fullstack-utveckling. Tyvärr är han bara grym på en utav dem, och det är tyvärr inte golfen."
+  tagline: "Om det är något som Fredrik inte tycker om så är det att skriva beskrivande texter så som denna. Något som Fredrik däremot tycker om är golf och fullstack-utveckling. Tyvärr är han bara grym på en utav dem, och det är inte golfen."
