--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -40,3 +40,6 @@
 
 - name: Fredrik
   tagline: "Om det är något som Fredrik inte tycker om så är det att skriva beskrivande texter så som denna. Något som Fredrik däremot tycker om är golf och fullstack-utveckling. Tyvärr är han bara grym på en utav dem, och det är inte golfen."
+
+- name: Oliver
+  tagline: "Oliver tar hand om sin omgivning och sina kunder lika bra som han sköter sin surdeg, och på jobbet visar han samma energi som när han kickboxas eller hänger på klätterväggen. Olivers nyfikenhet och vilja att ständigt lära sig nya saker passar perfekt i hans roll som säljare. Oliver hejar gärna på er över en lunch!"
